# random-quote-generator

./: pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst
random_quote_generator/: get_quote.py
